# smoldot

./: .gitignore
lib/: Cargo.toml
lib/examples/: libp2p_webrtc_side.rs  notes.md
lib/examples/webrtc-wasm/: Cargo.toml  index.html  justfile
lib/examples/webrtc-wasm/src/: lib.rs  perf.rs
lib/src/libp2p/: collection.rs
lib/src/libp2p/collection/: multi_stream.rs
lib/src/libp2p/connection/: noise.rs  webrtc_framing.rs
lib/src/libp2p/connection/established/: multi_stream.rs  substream.rs
light-base/: Cargo.toml
wasm-node/javascript/: package-lock.json
wasm-node/rust/: Cargo.toml
