[package]
name = "smoldot-webrtc-wasm"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
smoldot = { path = "../..", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["alloc", "getrandom", "std_rng"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
base64 = "0.22.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
smoldot-light = { path = "../../../light-base", default-features = false }
